--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "npx wrangler deploy _worker.js",
+    "deploy:preview": "npx wrangler deploy _worker.js --env preview"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.6",
